ip 黑白名单设置，并设置多cacheManager